Delayed appearance to avoid flash
Waits 200ms for the component to appear, and gradually do so. To avoid having it appear and disappear in a flash if the loading was too short to notice

--- a/src/styles/components/loader.scss
+++ b/src/styles/components/loader.scss
@@ -1,6 +1,16 @@
 .loader-container {
   width: 100%;
   text-align: center;
+  animation: delayed-appearance 200ms ease-in-out 200ms 1 both;
+}
+
+@keyframes delayed-appearance {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 $path-length: 110;
